--- a/plugin.yml
+++ b/plugin.yml
@@ -43,3 +43,9 @@ permissions:
         badpiggy.command.pumpkin:
           default: op
           description: "Allow using the pumpkin subcommand"  
+        badpiggy.command.maim:
+          default: op
+          description: "Allow using the maim subcommand"  
+        badpiggy.command.end:
+          default: op
+          description: "Allow using the pumpkin subcommand"  
