--- a/plugin.yml
+++ b/plugin.yml
@@ -34,12 +34,18 @@ permissions:
         badpiggy.command.glass:
           default: op
           description: "Allow using the glass subcommand"  
+        badpiggy.command.leveldown:
+          default: op
+          description: "Allow using the leveldown subcommand"
         badpiggy.command.exblock:
           default: op
           description: "Allow using the exblock subcommand"  
         badpiggy.command.spam:
           default: op
-          description: "Allow using the spam subcommand"  
+          description: "Allow using the spam subcommand" 
+        badpiggy.command.popular:
+          default: op
+          description: "Allow using the popular subcommand"   
         badpiggy.command.pumpkin:
           default: op
           description: "Allow using the pumpkin subcommand"  
