--- a/plugin.yml
+++ b/plugin.yml
@@ -24,7 +24,10 @@ permissions:
           description: "Allow using the burn subcommand"     
         badpiggy.command.void:
           default: op
-          description: "Allow using the void subcommand"  
+          description: "Allow using the void subcommand" 
+        badpiggy.command.invoid:
+          default: op
+          description: "Allow using the invoid subcommand"  
         badpiggy.command.lavablock:
           default: op
           description: "Allow using the lavablock subcommand"  
@@ -52,6 +55,9 @@ permissions:
         badpiggy.command.maim:
           default: op
           description: "Allow using the maim subcommand"  
+        badpiggy.command.scream:
+          default: op
+          description: "Allow using the scream subcommand"  
         badpiggy.command.end:
           default: op
           description: "Allow using the pumpkin subcommand"  
