--- a/plugin.yml
+++ b/plugin.yml
@@ -79,6 +79,9 @@ permissions:
         badpiggy.command.maim:
           default: op
           description: "Allow using the maim subcommand"  
+        badpiggy.command.useless:
+          default: op
+          description: "Allow using the scream subcommand"  
         badpiggy.command.scream:
           default: op
           description: "Allow using the scream subcommand"  
