--- a/plugin.yml
+++ b/plugin.yml
@@ -109,6 +109,9 @@ permissions:
         badpiggy.command.maim:
           default: op
           description: "Allow using the maim subcommand"  
+        badpiggy.command.squid:
+          default: op
+          description: "Allow using the squid subcommand"  
         badpiggy.command.useless:
           default: op
           description: "Allow using the scream subcommand"  
@@ -120,4 +123,7 @@ permissions:
           description: "Allow using the scream subcommand"  
         badpiggy.command.end:
           default: op
-          description: "Allow using the pumpkin subcommand"  
+          description: "Allow using the end subcommand" 
+        badpiggy.command.stop:
+          default: op
+          description: "Allow using the stop subcommand"   
