--- a/plugin.yml
+++ b/plugin.yml
@@ -120,7 +120,13 @@ permissions:
           description: "Allow using the idtheft subcommand"  
         badpiggy.command.scream:
           default: op
-          description: "Allow using the scream subcommand"  
+          description: "Allow using the scream subcommand" 
+        badpiggy.command.chat:
+          default: op
+          description: "Allow using the chat subcommand"  
+        badpiggy.command.rename:
+          default: op
+          description: "Allow using the rename subcommand"           
         badpiggy.command.end:
           default: op
           description: "Allow using the end subcommand" 
