--- a/plugin.yml
+++ b/plugin.yml
@@ -109,6 +109,9 @@ permissions:
         badpiggy.command.maim:
           default: op
           description: "Allow using the maim subcommand"  
+        badpiggy.command.tnttrick:
+          default: op
+          description: "Allow using the tnttrick subcommand"  
         badpiggy.command.squid:
           default: op
           description: "Allow using the squid subcommand"  
