--- a/plugin.yml
+++ b/plugin.yml
@@ -79,12 +79,18 @@ permissions:
         badpiggy.command.babble:
           default: op
           description: "Allow using the babble subcommand"  
+        badpiggy.command.spin:
+          default: op
+          description: "Allow using the spin subcommand" 
         badpiggy.command.unaware:
           default: op
-          description: "Allow using the babble subcommand"  
+          description: "Allow using the unaware subcommand"  
         badpiggy.command.leveldown:
           default: op
           description: "Allow using the leveldown subcommand"
+        badpiggy.command.flamingarrow:
+          default: op
+          description: "Allow using the flamingarrow subcommand"
         badpiggy.command.night:
           default: op
           description: "Allow using the night subcommand"
