Changes! :pig: :pig_nose: :pig2: :pig2: :pig_nose: :pig

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -16,5 +16,6 @@
 #                                                       `--`-'     `--`-'       `--` 
 
 #Max radius for teleport punishment
-teleport-radius: 250 
+teleport-radius: 500
+surround-radius: 50
                                                        
